testsuite/tests/grammar/invalid_lexers/case_1.lkt
import common

lexer foo_example {
    Foo
    match 1 {
        else send(Foo, 3)
    }
}
